
include_HEADERS = \
	grid_averager.h \
	grid_averager_circular.h \
	grid_averager_structured.h \
	grid_meter.h \
	meter_autocorrelation_vector.h \
	meter_autocorrelation_vector_t.h \
	meter_average.h \
	meter_bonded_crosscorrelation_vector.h \
	meter_distribution.h \
	meter_grouped.h \
	meter_live.h \
	meter_live_coloured.h \
	meter_live_geomview.h \
	meter_pair_distribution.h \
	meter_pair_distribution_with_walls.h \
	meter_pos_vel.h \
	meter_relative_velocity.h
