include_HEADERS = \
	pca_iapws-if97Test.h \
	pca_iapws-if97_1varTest.h \
	pca_iapws-if97_2varTest.h \
	pca_iapws-if97_cpTest.h \
	pca_iapws-if97_etaTest.h \
	pca_iapws-if97_kappaTest.h \
	pca_iapws-if97_pTest.h \
	pca_iapws-if97_rhoTest.h \
	smart_enumTest.h

AM_CPPFLAGS = -I$(top_srcdir)/src/basic/head
