include_HEADERS = \
	pca_iapws-if97Test.h \
	pca_iapws-if97_1varTest.h \
	pca_iapws-if97_2varTest.h \
	pca_iapws-if97_cpTest.h \
	pca_iapws-if97_etaTest.h \
	pca_iapws-if97_kappaTest.h \
	pca_iapws-if97_pTest.h \
	pca_iapws-if97_rhoTest.h \
	fake_function_particle.h \
	fake_symbol_f_particle_scalar.h \
	particle_velsTest.h \
	smart_enumTest.h \
	symbol_f_particle_arbitraryTest.h \
	symbol_f_particle_scalarTest.h \
	symbol_f_particle_velsTest.h

AM_CPPFLAGS = -I$(top_srcdir)/src/basic/head
