
noinst_LTLIBRARIES = libboundaryTest.la

libboundaryTest_la_SOURCES =
	
libboundaryTest_la_CXXFLAGS = @GSL_CFLAGS@ @SDL_CFLAGS@ @XML_CFLAGS@

libboundaryTest_la_LDFLAGS = @LT_LDFLAGS@

INCLUDES = -I$(top_srcdir)/srcUnittest/boundary/head -I$(top_srcdir)/src/basic/head -I$(top_srcdir)/src/boundary/head -I$(top_srcdir)/src/calculator/head -I$(top_srcdir)/src/function_parser/head -I$(top_srcdir)/src/geometry/head -I$(top_srcdir)/src/geometry/stl/head -I$(top_srcdir)/src/integrator/head -I$(top_srcdir)/src/particle_creator/head

