noinst_LTLIBRARIES = libcalculatorTest.la

libcalculatorTest_la_SOURCES =

libcalculatorTest_la_CXXFLAGS = @GSL_CFLAGS@

libcalculatorTest_la_LDFLAGS = @LT_LDFLAGS@

AM_CPPFLAGS = -I$(top_srcdir)/srcUnittest/calculator/head -I$(top_srcdir)/src/basic/head -I$(top_srcdir)/src/calculator/head -I$(top_srcdir)/src/geometry/head


