
noinst_LTLIBRARIES = libforceTest.la

libforceTest_la_SOURCES =

libforceTest_la_CXXFLAGS = @GSL_CFLAGS@ @SDL_CFLAGS@ @XML_CFLAGS@

libforceTest_la_LDFLAGS = @LT_LDFLAGS@

INCLUDES = -I$(top_srcdir)/srcUnittest/force/head -I$(top_srcdir)/src/basic/head -I$(top_srcdir)/src/calculator/head -I$(top_srcdir)/src/force/head -I$(top_srcdir)/src/function_parser/head -I$(top_srcdir)/src/geometry/head -I$(top_srcdir)/src/integrator/head
